# scipion-testrunner

./: .gitignore  .sonarcloud.properties  README.md  cli.py  pyproject.toml  renovate.json  runTests.py
.github/: CODEOWNERS
.github/workflows/: build-in-scipion.yml  build-standalone.yml  build.yml  release.yml
conf/: .coveragerc  ruff-src.toml  ruff-tests.toml
scipion_testrunner/: cli.py  runTests.py
scripts/: clean.sh  run-tests.ps1  run-tests.sh
src/scipion_testrunner/: __init__.py  __main__.py  cli.py  logger.py  runTests.py
src/scipion_testrunner/application/: cli.py  logger.py
src/scipion_testrunner/configuration/: __init__.py  test_config.py  test_data_keys.py
src/scipion_testrunner/domain/: test_service.py
src/scipion_testrunner/domain/handlers/: python_handler.py  scipion_handler.py  shell_handler.py
src/scipion_testrunner/repository/: file_service.py  python_service.py  scipion_service.py  shell_service.py
src/scipion_testrunner/repository/file_service/: file_service.py
src/scipion_testrunner/scipion/: test_getter.py
tests/: pwem.json
tests/e2e/scipion-em-dummy/: README.rst  pyproject.toml  requirements.txt  setup.py
tests/e2e/scipion-em-dummy/dummy/: __init__.py  protocols.conf  testData.json
tests/e2e/scipion-em-dummy/dummy/protocols/: __init__.py  protocol_dummy.py
tests/e2e/scipion-em-dummy/dummy/tests/: __init__.py  test_base.py  test_root.py
tests/e2e/scipion-em-dummy/dummy/tests/nested/: test_nested.py
tests/scipion_testrunner/application/: cli_test.py  logger_test.py
tests/scipion_testrunner/domain/: test_service_test.py
tests/scipion_testrunner/repository/: file_service_test.py  python_service_test.py  scipion_service_test.py
tests/unitary/application/: cli_test.py  logger_test.py
tests/unitary/configuration/: test_config_test.py
tests/unitary/domain/: test_service_test.py
tests/unitary/domain/handlers/: python_handler_test.py  scipion_handler_test.py  scipion_service_test.py  shell_handler_test.py
tests/unitary/repository/: scipion_service_test.py  shell_service_test.py
