[project]
name = "scipion-testrunner"
version = "0.0.1"
description = "Module to handle in an efficient way the execution of Scipion tests"
authors = [{name = "Martín Salinas", email = "ssalinasmartin@gmail.com"}]
maintainers = [{name = "Martín Salinas", email = "ssalinasmartin@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["scipion", "testing"]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/gigabit-clowns/scipion-testrunner.git"

[project.optional-dependencies]
test = [
    "pytest = ^8.1.1",
    "pytest-cov = ^5"
]
lint = ["ruff = ^0.5.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
