[project]
name = "scipion-testrunner"
version = "1.0.1"
authors = [ 
	{ name = "Martín Salinas", email = "ssalinasmartin@gmail.com" }
]
description = "Module to handle in an efficient way the execution of Scipion tests"
keywords = ["scipion", "testing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable"
]
readme = "README.md"
license = { "file" = "LICENSE" }

requires-python = ">=3.8"

[project.optional-dependencies]
test = [
	"pytest==8.*",
	"pytest-cov==5.*; python_version < '3.9'",
	"pytest-cov==6.*; python_version > '3.8'",
	"ruff==0.*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]

[project.urls]
Homepage = "://github.com/gigabit-clowns/scipion-testrunner"
Issues = "://github.com/gigabit-clowns/scipion-testrunner/issues"

[project.scripts]
scipion_testrunner = "scipion_testrunner.__main__:main"
