[project]
name = "scipion-testrunner"
version = "1.0.1"
authors = [ 
	{ name = "Martín Salinas", email = "ssalinasmartin@gmail.com" }
]
description = "Module to handle in an efficient way the execution of Scipion tests"
keywords = ["scipion", "testing"]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable"
]
readme = "README.md"
license = { "file" = "LICENSE" }

requires-python = ">=3.8"

[project.optional-dependencies]
test = [
	"pytest==8.3.5; python_version < '3.10'",
  	"pytest==9.0.3; python_version >= '3.10'",
	"pytest-cov==5.0.0; python_version < '3.9'",
  	"pytest-cov==7.1.0; python_version >= '3.9'",
	"ruff==0.15.12"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py"]

[project.urls]
Homepage = "https://github.com/gigabit-clowns/scipion-testrunner"
Issues = "https://github.com/gigabit-clowns/scipion-testrunner/issues"

[project.scripts]
scipion_testrunner = "scipion_testrunner.__main__:main"
