[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scipion-em-dummy"
version = "1.0.0"
authors = [ 
	{ name = "Martín Salinas", email = "ssalinasmartin@gmail.com" }
]
description = "Dummy Scipion plugin in order to perform E2E testing"
keywords = ["scipion", "E2E"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Development Status :: 5 - Production/Stable"
]

requires-python = ">=3.8"
dependencies = [
  "scipion-em==3.11.0",
  "scipion-pyworkflow==3.11.6"
]

[project.optional-dependencies]
test = [
	"pytest==8.3.5; python_version < '3.10'",
  	"pytest==9.0.3; python_version >= '3.10'",
	"pytest-cov==5.0.0; python_version < '3.9'",
  	"pytest-cov==7.1.0; python_version >= '3.9'",
	"ruff==0.15.12"
]

[project.entry-points."pyworkflow.plugin"]
dummy = "dummy"

[tool.setuptools.package-data]
dummy = ["protocols.conf"]
